tests/compile_errors/type/013_let_generic_function_reassign_shape_mismatch.xr
fn id<T>(x: T) -> T {
    return x
}

fn to_string<U>(x: U) -> string {
    return string(x)
}

let f = id
f = to_string
